vector_grativy_velocity

--- a/Phase1/Basic_game_math_and_physics/Vectors_speed_velocity/index.html
+++ b/Phase1/Basic_game_math_and_physics/Vectors_speed_velocity/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <canvas id="gameCanvas" width="600" height="400" style="border:1px solid lightgrey;" ></canvas>
-    <script src="/Phase1/Basic_game_math_and_physics/Vectors_speed_velocity/script.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
