--- a/Phase1/Display_image_spirte_sheet/pratice.html
+++ b/Phase1/Display_image_spirte_sheet/pratice.html
@@ -11,101 +11,107 @@
     <canvas id="gameCanvas" width="1000" height="600" style="border:1px solid lightgrey;"></canvas>
     
     <script>
-   // Lấy canvas và ngữ cảnh
-    const canvas = document.getElementById('gameCanvas');
-    const ctx = canvas.getContext('2d');
+    // Lấy canvas và ngữ cảnh
+        const canvas = document.getElementById('gameCanvas');
+        const context = canvas.getContext('2d');
 
-    // Kích thước canvas
-    const width = canvas.width;
-    const height = canvas.height;
+        // Kích thước canvas
+        const width = canvas.width;
+        const height = canvas.height;
 
-    // Tải hình ảnh phi thuyền
-    const spaceshipImage = new Image();
-    spaceshipImage.src = './space1.png'; // Đảm bảo có hình ảnh trong cùng thư mục
+        // Tải hình ảnh phi thuyền
+        const spaceshipImage = new Image();
+        spaceshipImage.src = './space1.png'; // Đảm bảo có hình ảnh trong cùng thư mục
 
-    // Vị trí và góc phi thuyền
-    let spaceship = {
-        x: width / 2,
-        y: height / 2,
-        angle: 0,
-        speed: 2
-    };
+        // Vị trí và góc phi thuyền
+        let spaceship = {
+            x: width / 2,
+            y: height / 2,
+            angle: 0,
+            speed: 2
+        };
 
-    // Vị trí chuột
-    let mouseX = spaceship.x;
-    let mouseY = spaceship.y;
+        // Vị trí chuột
+        let mouseX = spaceship.x;
+        let mouseY = spaceship.y;
 
-    // Lắng nghe sự kiện chuột
-    canvas.addEventListener('mousemove', (event) => {
-        const rect = canvas.getBoundingClientRect();
-        mouseX = event.clientX - rect.left;
-        mouseY = event.clientY - rect.top;
-    });
+        // Lắng nghe sự kiện chuột
+        canvas.addEventListener('mousemove', (event) => {
+            const rect = canvas.getBoundingClientRect();
+            mouseX = event.clientX - rect.left;
+            mouseY = event.clientY - rect.top;
+        });
 
-    // Lắng nghe sự kiện phím
-    let keys = {};
-    window.addEventListener('keydown', (event) => {
-        keys[event.code] = true;
-    });
-    window.addEventListener('keyup', (event) => {
-        keys[event.code] = false;
-    });
+        // Lắng nghe sự kiện phím
+        let keys = {};
+        window.addEventListener('keydown', (event) => {
+            keys[event.code] = true;
+        });
+        window.addEventListener('keyup', (event) => {
+            keys[event.code] = false;
+        });
 
-    // Cập nhật vị trí và góc phi thuyền
-    function update() {
-        // Tính toán góc để quay về con trỏ
-        const dx = mouseX - spaceship.x;
-        const dy = mouseY - spaceship.y;
-        spaceship.angle = Math.atan2(dy, dx);
+        // Cập nhật vị trí và góc phi thuyền
+        function update() {
+            // Tính toán góc để quay về con trỏ
+            const dx = mouseX - spaceship.x;
+            const dy = mouseY - spaceship.y;
+            spaceship.angle = Math.atan2(dy, dx);
 
-        // Di chuyển phi thuyền
-        if (keys['ArrowUp']) {
-            spaceship.x += spaceship.speed * Math.cos(spaceship.angle);
-            spaceship.y += spaceship.speed * Math.sin(spaceship.angle);
+            // Di chuyển phi thuyền
+            if (keys['ArrowUp']) {
+               // spaceship.x += spaceship.speed 
+                spaceship.y -= spaceship.speed
+            }
+            if (keys['ArrowLeft']) {
+                spaceship.x -= spaceship.speed;
+            }
+            if (keys['ArrowRight']) {
+                spaceship.x += spaceship.speed;
+            }
+            if (keys['ArrowDown']) {
+                spaceship.y += spaceship.speed;
+            }
         }
-        if (keys['ArrowLeft']) {
-            spaceship.x -= spaceship.speed;
+
+        // Vẽ phi thuyền trên canvas
+        function draw() {
+            // Xóa canvas
+            context.clearRect(0, 0, width, height);
+
+            // Lưu trạng thái canvas
+            context.save();
+
+            // Dịch chuyển đến vị trí phi thuyền
+            context.translate(spaceship.x, spaceship.y);
+
+            // Xoay canvas theo góc phi thuyền
+            context.rotate(spaceship.angle);
+
+             context.translate(-spaceshipImage.width / 2, -spaceshipImage.height / 2)
+            // Vẽ hình ảnh phi thuyền
+            context.drawImage(spaceshipImage,0,0);
+
+           
+            // Khôi phục trạng thái canvas
+            context.restore();
         }
-        if (keys['ArrowRight']) {
-            spaceship.x += spaceship.speed;
+            //   function updateRotation() {
+            //         // /spaceship.rotation += spaceship.speed; // Speed is in radians per frame
+            //          spaceship.angle += 0.05;
+            //     }
+        // Vòng lặp trò chơi
+        function gameLoop() {
+            update();
+           // updateRotation()
+            draw();
+            requestAnimationFrame(gameLoop);
         }
-        if (keys['ArrowDown']) {
-            spaceship.y += spaceship.speed;
-        }
-    }
 
-    // Vẽ phi thuyền trên canvas
-    function draw() {
-        // Xóa canvas
-        ctx.clearRect(0, 0, width, height);
-
-        // Lưu trạng thái canvas
-        ctx.save();
-
-        // Dịch chuyển đến vị trí phi thuyền
-        ctx.translate(spaceship.x, spaceship.y);
-
-        // Xoay canvas theo góc phi thuyền
-        ctx.rotate(spaceship.angle);
-
-        // Vẽ hình ảnh phi thuyền
-        ctx.drawImage(spaceshipImage, -spaceshipImage.width / 2, -spaceshipImage.height / 2);
-
-        // Khôi phục trạng thái canvas
-        ctx.restore();
-    }
-
-    // Vòng lặp trò chơi
-    function gameLoop() {
-        update();
-        draw();
-        requestAnimationFrame(gameLoop);
-    }
-
-    // Bắt đầu trò chơi khi hình ảnh được tải
-    spaceshipImage.onload = () => {
-        gameLoop();
-    };
+        // Bắt đầu trò chơi khi hình ảnh được tải
+        spaceshipImage.onload = () => {
+            gameLoop();
+        };
 
     </script>
 </body>
