--- a/Phase1/Build_canvas_game/index.html
+++ b/Phase1/Build_canvas_game/index.html
@@ -8,8 +8,8 @@
 </head>
 
 <body>
-    <canvas id="gameCanvas" width="600" height="600" style="border:1px solid lightgrey;"></canvas>
+    <canvas id="gameCanvas" width="400" height="700" style="border:1px solid lightgrey;"></canvas>
     <!-- <img src="" alt="" srcset=""> -->
-    <script src="./script.js"></script>
+    <script src="./bubble_shooter.js"></script>
 </body>
 </html>
