--- a/Phase1/Build_canvas_game/index.html
+++ b/Phase1/Build_canvas_game/index.html
@@ -4,7 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Falling Star</title>
+    <title>Bubble Shooter</title>
+    <style>
+       * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    }
+
+    body {
+        display: flex; 
+        justify-content: center; 
+        align-items: center; 
+        height: 100vh; 
+        margin: 0;
+    }
+    </style>
 </head>
 
 <body>
