--- a/Phase1/Build_canvas_game/Bubble_Shooter_Game/main/index.html
+++ b/Phase1/Build_canvas_game/Bubble_Shooter_Game/main/index.html
@@ -22,8 +22,8 @@
     </style>
 </head>
 
-<body>
-    <canvas id="gameCanvas" width="422" height="700" style="border:1px solid lightgrey;"></canvas>
+<body style="background-color: black;">
+    <canvas id="gameCanvas" width="422" height="700" style="border:1px solid rgb(74, 5, 236); border-radius: 20px;"></canvas>
     <!-- <img src="" alt="" srcset=""> -->
     <script type="module" src="./index.js"></script>
 </body>
